--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ jmespath==0.9.0
 pyexifinfo==0.4.0
 python-dateutil==2.5.3
 python-dotenv==0.6.0
+python-magic==0.4.12
 s3transfer==0.1.8
 six==1.10.0
